Correction contraste page contact

--- a/style.css
+++ b/style.css
@@ -89,12 +89,12 @@ a:hover {
     left: 0;
     right: 0;
 }
-
+/*
 .texture-paper::before {
     background: url("img/texture-paper.png");
     background-size: 280px 280px;
 }
-
+*/
 .b-parallax {
     background-attachment: fixed;
 }
@@ -736,7 +736,7 @@ h4 {
 }
 
 .white {
-    color: black!important;
+    color: #FFFFFF!important;
 }
 
 .portfolio-thumb {
@@ -771,15 +771,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #2E405B;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF !important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #2E405A;
     color: #FFFFFF!important;
 }
 
@@ -808,11 +808,11 @@ h4 {
     color: #364577!important;
     border-color: #364577!important;
 }
-
+/*
 .bg-dots-bg {
     background-image: url("img/dots-bg.png");
 }
-
+*/
 .bg-lines-h2-bg {
     background-image: url("img/lines-h2-bg.png");
 }
